--- a/docs/基础/动态规划/定义/方案数量.md
+++ b/docs/基础/动态规划/定义/方案数量.md
@@ -2,9 +2,14 @@
 
 ## 定义
 
-dp [c] = dp [c] + dp [c-w[i]]
+- 加法
 
-加法。
+  dp[i] = dp[i-1] **+** dp [i-2]
+
+- 可分情况
+
+  dp[i] = dp[i-1] + dp[i/2]  （如果i是偶数）
+  dp[i] = dp[i-1]            （如果i是奇数）
 
 ## 例子
 
