--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -60,11 +60,7 @@
 
 
 
-桶：桶内排序，输出是把桶连起来就行。
 
-计数：选出最大值，计数数组 m + 1。
-
-基数：从低位到高位进行计数排序，基数作计数。
 
 | 算法 |    最好    |    最坏    |    平均    |  空间   | 稳定  | 思想 |          注意事项          |      速度      |         优化          |
 | :--: | :--------: | :--------: | :--------: | :-----: | :---: | :--: | :------------------------: | :------------: | :-------------------: |
@@ -88,37 +84,50 @@
 
 **是否基于比较**：基于比较的排序依赖比较运算符（<、=、>）来判断元素的相对顺序，从而排序整个数组，理论最优时间复杂度为 O(nlog⁡n) 。而非比较排序不使用比较运算符，时间复杂度可达 O(n) ，但其通用性相对较差。
 
-## 稳定和不稳定
+## 🚀稳定和不稳定
 
-稳定
+- 不稳定
 
-​	**冒泡排序、插入排序；归并排序**
+  - **快速排序**（441）
 
-不稳定
+  - **堆排序**（左右乱）
+  - **选择排序**（441，前面的相同元素因交换而排到后面）
 
-​	选择排序（441）
+- 稳定：记住不稳定，剩下3个就是稳定
 
-​	快速排序（441）
+  - **冒泡排序**
 
-​	堆排序（左右乱）
+  - **插入排序**
 
-## 时间复杂度
+  - **归并排序**
 
-> 最坏、最好、平均一样：步骤是死的
+## 🚀时间复杂度
 
-​	选择O(n2)；归并O(nlogn)、堆O(nlogn)；计数O(n+m)、基数O(nk)
+- 最坏、最好、平均一样：步骤是死的
 
+  - $O(n^2)$：选择
 
+  - O(nlogn)：归并、堆
 
-> 最好不一样
+- 最好 O(n)：数组已排序
+  - 冒泡（如果是**优化版本**，则一轮就结束）
+  - 插入
 
-冒泡：最好情况是**优化版本** O(n)，当数组已排序，则一轮就结束。
+- 最坏不一样 $O(n^2)$
+  - 快速排序：当数组中所有元素都相等、已正序、已倒序
 
-插入：最好情况是 O(n)
+### 很多排序最优是nLogn的，有没有更优的？
 
-> 最坏不一样
+如果是
 
-快速排序：最差时间复杂度 O(n2)，当数组中所有元素都相等、已正序、已倒序
+- **数据类型是整数**，
+- **范围较小**
 
-桶排序：最差时间复杂度 O(n2) ，所有元素被分至同一个桶中
+计数排序、桶排序、基数排序，可以达到 O(n)
 
+- 桶：桶内排序，输出是把桶连起来就行。
+  - 最差时间复杂度 O(n2) ，所有元素被分至同一个桶中
+
+- 计数：选出最大值，计数数组 m + 1。
+
+- 基数：从低位到高位进行计数排序，基数作计数。
