--- a/docs/题/笔试/Untitled Folder/迷宫正方形面积.md
+++ b/docs/题/笔试/Untitled Folder/迷宫正方形面积.md
@@ -1,38 +1,13 @@
-【01背包、极差】
-
-[P3985 不开心的金明 - 洛谷 | 计算机科学教育新生态 (luogu.com.cn)](https://www.luogu.com.cn/problem/P3985)
-
-[327. 区间和的个数](https://leetcode.cn/problems/count-of-range-sum/)
-
-
-
-
-
-递归
-
-分解问题，子问题和原问题。
-
-递，是将子问题分解为下一层的子问题。
-
-归，是从边界条件往上一层层传递答案。
-
-
-
-处理递归，核心就是千万不要想子问题的过程，马上就绕迷糊了。而要想子问题的结果，思路就清晰了
-
-只要代码的边界条件和非边界条件的逻辑写对了，代码就是正确的，没必要想递归是怎么一层一层走的。
-
-
+```
+[[1,0,1,0,0],
+ [1,0,1,1,1],
+ [1,1,1,1,1],
+ [1,0,0,1,0]]		其中全是1的正方形的面积是4
+```
 
 
 
 ```java
-
-        Solution solution = new Solution();
-        char[][] m = {{1,0,1,0,0},{1,0,1,1,1},{1,1,1,1,1},{1,0,0,1,0}};
-        System.out.println(solution.maximalSquare(m));
-
-
 package org.example;
 
 class Solution {
@@ -67,7 +42,7 @@ class Solution {
             for(int j = 1; j <= n; j++){
                 if(matrix[i-1][j-1] == 0) continue;
                 dfs(i, j, -1, -1);
-                dfs(i, j, 1, 1);
+                dfs(i, j, 1, 1);		// 【感觉只要一个往右下角的就行了，因为每个i j 都遍历，所以无须四个方向】
                 dfs(i, j, -1, 1);
                 dfs(i, j, 1, -1);
             }
