--- a/docs/基础/排序/04_快速.md
+++ b/docs/基础/排序/04_快速.md
@@ -25,7 +25,7 @@ class Solution {
             int i = l, j = r;			// i和j表示空缺位，开始nums[i]是空缺位
             int base = nums[i];			// 第一个选择为哨兵。
             while (i < j) {
-                // j：找到右边不该存在的[小于等于]元素
+                // j：找到右边不该存在的[小于]元素
                 while (i < j && nums[j] >= base) {	   	
                     j--;
                 }
@@ -33,7 +33,7 @@ class Solution {
                     nums[i] = nums[j];					// 拿j填补空缺 i
                 }
 				
-                // i：找到左边不该存在的[大于等于]元素
+                // i：找到左边不该存在的[大于]元素
                 while (i < j && nums[i] <= base) {		
                     i++;
                 }
@@ -76,15 +76,15 @@ class Solution {
 
 - **空间复杂度为 $O(n)$、原地排序**：在最差情况下，达到最差递归深度 $n$ ，使用 $O(n)$ 栈帧空间。排序操作是在原数组上进行的，未借助额外数组。
 
-- **非稳定排序**：在哨兵划分的最后一步，基准数可能会被交换至相等元素的右侧。
+- **非稳定排序**：在哨兵划分的最后一步，哨兵可能会被交换至相等元素的右侧。
 
 ​	441
 
 ```
 441
 4是哨兵
-[]41		找到1
-14[]		找不到大于的，i==j
+[]41		找j，找到1
+14[]		找i，没大于的，则i==j
 144			填充哨兵，这样4的顺序就倍调换了
 ```
 
