--- a/docs/题/leetcode/100. 相同的树.md
+++ b/docs/题/leetcode/100. 相同的树.md
@@ -17,7 +17,4 @@ class Solution {
 }
 ```
 
-其实是dfs的模式
-
-- `p.val == q.val`是剪枝
-- `isSameTree(p.left, q.left)` 和 `isSameTree(p.right, q.right)` 是dfs。
+返回值，是普通递归，而非dfs。
