--- a/docs/题/leetcode/110. 平衡二叉树.md
+++ b/docs/题/leetcode/110. 平衡二叉树.md
@@ -4,19 +4,19 @@
 
 基于深度，判断左右子树的深度。
 
-并且用返回 -1来作为不继续递归。
+并且用返回 -1 来递给上面，不再传递深度值。
 
 ```java
 class Solution {
     public boolean isBalanced(TreeNode root) {
-        return f(root) != -1;
+        return depth(root) != -1;
     }
 
-    public int f(TreeNode root){
+    public int depth(TreeNode root){
         if(root == null){
             return 0;
         }
-        int left = f(root.left);
+        int left = depth(root.left);
         if(left == -1){
             return -1;
         }
