--- a/docs/题/leetcode/124. 二叉树中的最大路径和.md
+++ b/docs/题/leetcode/124. 二叉树中的最大路径和.md
@@ -1,14 +1,24 @@
-**路径和** 是路径中各节点值的总和。
+[toc]
 
-​	二叉树中的 **路径** 被定义为一条节点序列，序列中每对相邻节点之间都存在一条边。同一个节点在一条路径序列中 至多出现一次 。
+[124. 二叉树中的最大路径和 - 力扣（LeetCode）](https://leetcode.cn/problems/binary-tree-maximum-path-sum/)
 
-​	该路径 至少包含一个 节点，且不一定经过根节点。
+> **路径和** 是路径中各节点值的总和。
+>
+> 二叉树中的 **路径** 被定义为一条节点序列，序列中每对相邻节点之间都存在一条边。同一个节点在一条路径序列中 至多出现一次 。
+>
+> 该路径 至少包含一个 节点，且不一定经过根节点（也不一定经过叶子节点）。
 
 
+
+## dfs1
 
 最大链和：以当前节点为根，到子树中某个节点的路径，取其最大路径和。保证一定非负。
 
 
+
+- dfs 返回的是 最大链和：保证一定非负。0 / max(max(左, 右) + 自 vall, 0).
+
+- res 更新是 **最大路径和 = 自身 val + 左节点的最大链和 + 右节点的最大链和**。
 
 注意：`int res = Integer.MIN_VALUE;`。对应只有一个根节点是-3，不然输出0.
 
@@ -37,3 +47,30 @@ class Solution {
     }
 }
 ```
+
+## dfs2
+
+```java
+class Solution {
+    int res = Integer.MIN_VALUE;
+
+    public int maxPathSum(TreeNode root) {
+        depth(root);
+        return res;
+    }
+
+    public int depth(TreeNode root) {
+        if (root == null) {
+            return 0;
+        }
+
+        int left = depth(root.left);
+        int right = depth(root.right);
+
+        res = Math.max(res, root.val + (left > 0 ? left : 0) + (right > 0 ? right : 0));
+
+        return root.val + Math.max(0, Math.max(left, right));
+    }
+}
+```
+
