--- a/docs/题/leetcode/226. 翻转二叉树.md
+++ b/docs/题/leetcode/226. 翻转二叉树.md
@@ -1,4 +1,33 @@
-# 递归
+[toc]
+
+
+
+## dfs
+
+```java
+class Solution {
+    public TreeNode invertTree(TreeNode root) {
+        dfs(root);
+        return root;
+    }
+
+    public void dfs(TreeNode root){
+        if(root == null){
+            return;
+        }
+        TreeNode left = root.left;
+        root.left = root.right;
+        root.right = left;
+
+        dfs(root.left);
+        dfs(root.right);
+    }
+}
+```
+
+
+
+## 普通递归
 
 ```java
 // 226. 翻转二叉树
@@ -18,6 +47,4 @@ class Solution {
     }
 }
 ```
-
-# bfs
 
