--- a/docs/背/背java/数组.md
+++ b/docs/背/背java/数组.md
@@ -4,7 +4,7 @@
 
 `return new int[]{1,2,3};`
 
-## 非基本类型，动态初始化
+## 二维数组的动态初始化
 
 ```java
 char[][] cs = new char[strs.length][];      // 动态初始化
@@ -22,18 +22,12 @@ Arrays.sort(arr);		// 基本类型
 Arrays.sort(arr, 0, n);		// 基本类型, [0, n)
 ```
 
-
-
 自定义排序规则：必须是 非基本类型（对象） T 
 
 ```java
-Arrays.sort(arr);		// 基本类型
-
 Integer[] arr2 = Arrays.stream(arr).boxed().toArray(Integer[]::new);
 Arrays.sort(arr2, (a,b)-> a-b);		// 必须是T[]		sort(T[] a, Comparator<? super T> c) 
-```
 
-```java
 Arrays.sort(arr2, (a,b)-> {
     if( a < b ){
         return -1;		// a 排在 b 前
@@ -58,15 +52,17 @@ System.out.println(Arrays.toString(s));     // [45678, 456, 123, 0]
 ## copy
 
 ```java
-// copy
+// copyOf
 int[] arr2 = Arrays.copyOf(arr, 3);
 int[] arr3 = Arrays.copyOf(arr, arr.length);
 
+// copyOfRange
 int[] arr4 = Arrays.copyOfRange(arr, 0, 3);
 int[] arr5 = Arrays.copyOfRange(arr, 0, arr.length);
 
+// arraycopy
 int[] brr = new int[3];
-System.arraycopy(arr, 0, brr, 0, 3);
+System.arraycopy(arr, 0, brr, 0, 3);		// arr → brr
 ```
 
 ## equals
