--- a/docs/基础/02二分查找/二分查找.md
+++ b/docs/基础/02二分查找/二分查找.md
@@ -234,9 +234,9 @@ leftmost i rightmost j 版
 
 变种之局部最大值系列：
 
-​	 [852. 山脉数组的峰顶索引.md](..\题\leetcode\852. 山脉数组的峰顶索引.md) 
+​	 [852. 山脉数组的峰顶索引.md](..\..\题\leetcode\852. 山脉数组的峰顶索引.md) 
 
-​	 [162. 寻找峰值.md](..\题\leetcode\162. 寻找峰值.md) 
+​	 [162. 寻找峰值.md](..\..\题\leetcode\162. 寻找峰值.md) 
 
 ​	 [1901. 寻找峰值 II.md](..\题\leetcode\1901. 寻找峰值 II.md) 
 
