--- a/docs/题/leetcode/1080. 根到叶路径上的不足节点.md
+++ b/docs/题/leetcode/1080. 根到叶路径上的不足节点.md
@@ -2,6 +2,16 @@
 
 [1080. 根到叶路径上的不足节点 - 力扣（LeetCode）](https://leetcode.cn/problems/insufficient-nodes-in-root-to-leaf-paths/)
 
+> 给你二叉树的根节点 `root` 和一个整数 `limit` ，请你同时删除树中所有 **不足节点** ，并返回最终二叉树的根节点。
+>
+> 假如通过节点 `node` 的每种可能的 “根-叶” 路径上值的总和全都小于给定的 `limit`，则该节点被称之为 **不足节点** ，需要被删除。
+
+
+
+
+
+
+
 dfs + 普通递归
 
 ```java
