--- a/docs/基础/02二分查找/二分查找.md
+++ b/docs/基础/02二分查找/二分查找.md
@@ -53,7 +53,7 @@ class Solution {
         return -1;
         // 返回将会被按顺序插入的位置。
         //      return i;         直接写法
-        //      return -(i + 1);  java底层写法
+        //      return -(i + 1);  java底层写法: 让结果区分于找到的情况。-2就是插入1的位置，2就是找到了下标2的位置。
     }
 }
 ```
