--- a/docs/基础/08图/03生成树.md
+++ b/docs/基础/08图/03生成树.md
@@ -1,11 +1,6 @@
 [toc]
 
-Prim和Kruskal算法
-
-- Prim遍历节点
-- Kruskal遍历边
-
-## Prim算法
+## Prim算法：遍历节点
 
 和dijkstra算法相似：w + dist + vis + **pre**
 - 不是到起始节点的累计路径，而是邻居距离（但不是最短的邻居距离，见图2）。
@@ -75,7 +70,7 @@ class Solution {
 }
 ```
 
-## Kruskal算法
+## Kruskal算法：遍历边
 
 遍历边：并查集
 - 选择最小的边，连通头尾节点。
