--- a/docs/题/leetcode/54. 螺旋矩阵.md
+++ b/docs/题/leetcode/54. 螺旋矩阵.md
@@ -1,39 +1,86 @@
-难点在于混淆 坐标轴方向。
+[54. 螺旋矩阵 - 力扣（LeetCode）](https://leetcode.cn/problems/spiral-matrix/description/)
 
-（1）不要用 dx dy 的表示方法，而是要用 i j 的直观。x和y坐标轴是x向下为正、y向右为正。
+给你一个 `m` 行 `n` 列的矩阵 `matrix` ，请按照 **顺时针螺旋顺序** ，返回矩阵中的所有元素。
 
-（2）di、dj的初始化是螺旋的移动方向，[i+0, j+1]是向右，这可比 x y更不容出错。
+ 
+
+**示例 1：**
+
+![img](https://assets.leetcode.com/uploads/2020/11/13/spiral1.jpg)
+
+```
+输入：matrix = [[1,2,3],[4,5,6],[7,8,9]]
+输出：[1,2,3,6,9,8,7,4,5]
+```
+
+**示例 2：**
+
+![img](https://assets.leetcode.com/uploads/2020/11/13/spiral.jpg)
+
+```
+输入：matrix = [[1,2,3,4],[5,6,7,8],[9,10,11,12]]
+输出：[1,2,3,4,8,12,11,10,9,5,6,7]
+```
+
+
+
+- 采用处理当前节点的方式
+
+- 没有回溯
+
+- di、dj的初始化是螺旋的移动方向， `r d l u`，可不是随便写的。
+
+- di dj的方向是全局继承的，而不是每次都沿着 r d l u开始试，这样过不了
+
+  ```
+  for(int t = 0; t < 4; t++){
+      dfs(i + di[t], j + dj[t]);
+  }
+  
+  输入
+  matrix =
+  [[1,2,3,4],[5,6,7,8],[9,10,11,12],[13,14,15,16],[17,18,19,20],[21,22,23,24]]
+  输出
+  [1,2,3,4,8,12,16,20,24,23,22,21,17,18,19,15,14,13,9,10,11,7,6,5] 17完了选右
+  预期结果
+  [1,2,3,4,8,12,16,20,24,23,22,21,17,13,9,5,6,7,11,15,19,18,14,10] 17完了继续向上
+  ```
+
+  
 
 ```java
 // 54. 螺旋矩阵
 class Solution {
+    int[][] matrix;
+    boolean[][] vis;
+    int m;
+    int n;
+    List<Integer> res = new ArrayList<>();
+    // 					   r  d  l   u
     int[] di = new int[] { 0, 1, 0, -1 };
     int[] dj = new int[] { 1, 0, -1, 0 };
+    int control = 0;
+    int count = 0;
 
     public List<Integer> spiralOrder(int[][] matrix) {
-        List<Integer> result = new ArrayList<>();
-        int m = matrix.length;
-        int n = matrix[0].length;
-        int size = m * n;
-        boolean[][] vis = new boolean[m][n];
-        int count = 0;
-        int bi = 0, bj = 0;
-        int control = 0;
-        while (count < size) {
-            vis[bi][bj] = true;
-            result.add(matrix[bi][bj]);
-            // 尝试越界
-            int bi_temp = bi + di[control];
-            int bj_temp = bj + dj[control];
-            if (bi_temp == m || bi_temp == -1 || bj_temp == n || bj_temp == -1 || vis[bi_temp][bj_temp] == true) {
-                control = (control + 1) % 4;
-            }
-            // 真正
-            bi += di[control];
-            bj += dj[control];
-            count++;
+        m = matrix.length;
+        n = matrix[0].length;
+
+        this.matrix = matrix;
+        vis = new boolean[m][n];
+        dfs(0, 0);
+        return res;
+    }
+
+    public void dfs(int i, int j){
+        if(i < 0 || i >= m || j < 0 || j >= n || vis[i][j] == true){
+            return;
         }
-        return result;
+        vis[i][j] = true;
+        res.add(matrix[i][j]);
+        for(int t = 0; t < 4; t++, control = (control + 1) % 4){
+            dfs(i + di[control], j + dj[control]);
+        }
     }
 }
 ```
