--- a/docs/题/leetcode/743. 网络延迟时间.md
+++ b/docs/题/leetcode/743. 网络延迟时间.md
@@ -1,1 +1,252 @@
- [最短距离.md](..\..\基础\图\最短距离.md) 
+
+
+[743. 网络延迟时间 - 力扣（LeetCode）](https://leetcode.cn/problems/network-delay-time/description/)
+
+
+
+## dijkstra 
+
+### 邻接矩阵
+
+```java
+// 743. 网络延迟时间
+class Solution {
+    public static final int INF = Integer.MAX_VALUE >> 1;
+
+    public int networkDelayTime(int[][] times, int n, int k) {
+        // 权：本题目中有些权为0，故而用-1表示不连接
+        int[][] w = new int[n + 1][n + 1];
+        for (int[] each : w) {
+            Arrays.fill(each, -1);
+        }
+        for (int i = 1; i <= n; i++) {
+            w[i][i] = 0;
+        }
+        for (int[] edge : times) {
+            int from = edge[0], to = edge[1], weight = edge[2];
+            w[from][to] = weight;
+            // w[to][from] = weight;    // 本题是有向图
+        }
+
+        // 起始先将所有的点标记为「未更新」和「距离为正无穷」（起始节点的dist为0）
+        boolean[] vis = new boolean[n + 1];
+        int[] dist = new int[n + 1];
+        Arrays.fill(dist, INF);
+        dist[k] = 0;
+
+        dijkstra(w, vis, dist, n);
+
+        int max = -1;
+        for (int i = 1; i <= n; i++) {
+            if (dist[i] != INF) {
+                max = Math.max(max, dist[i]);
+            } else {
+                return -1;
+            }
+        }
+        return max;
+    }
+
+    public void dijkstra(int[][] w, boolean[] vis, int[] dist, int n) {
+        // n个节点n轮
+        for (int p = 1; p <= n; p++) {
+            // 当前节点：找出未遍历过且距离最小的节点。
+            // cur必须是0，对应 dist[0] = INF，否则 cur = 1，但一旦被访问过，后续其他节点都被dist[1]拦住了
+            int cur = 0;
+            for (int i = 1; i <= n; i++) {
+                if (!vis[i] && dist[i] < dist[cur]) {
+                    cur = i;
+                }
+            }
+            
+            // 更新当前节点的相邻节点的距离 dist
+            for (int i = 1; i <= n; i++) {
+                // 未访问过 且 相邻节点
+                if (!vis[i] && w[cur][i] >= 0) {
+                    dist[i] = Math.min(dist[i], dist[cur] + w[cur][i]);
+                }
+                // if(!vis[i] && w[cur][i] >= 0 && dist[cur] + w[cur][i] < dist[i] ){
+                //     dist[i] = dist[cur] + w[cur][i];
+                // }
+            }
+
+            // 打上标记
+            vis[cur] = true;
+        }
+    }
+}
+```
+
+
+
+### spa
+
+```java
+class Solution {
+    public static final int INF = Integer.MAX_VALUE >> 1;
+
+    public int networkDelayTime(int[][] times, int n, int k) {
+        int[] head = new int[n + 1];
+
+        int m = times.length + 1;
+        int[] w = new int[m + 1];
+        int[] eTo = new int[m + 1];
+        int[] eNext = new int[m + 1];
+
+        int idx = 1;
+        for (int[] edge : times) {
+            int from = edge[0], to = edge[1], weight = edge[2];
+
+            w[idx] = weight;
+            eTo[idx] = to;
+            eNext[idx] = head[from];
+            head[from] = idx;
+            idx++;
+        }
+
+        // 起始先将所有的点标记为「未更新」和「距离为正无穷」（起始节点的dist为0）
+        boolean[] vis = new boolean[n + 1];
+        int[] dist = new int[n + 1];
+        Arrays.fill(dist, INF);
+        dist[k] = 0;
+
+        dijkstra(head, w, eTo, eNext, vis, dist, n);
+
+        int max = -1;
+        for (int i = 1; i <= n; i++) {
+            if (dist[i] != INF) {
+                max = Math.max(max, dist[i]);
+            } else {
+                return -1;
+            }
+        }
+        return max;
+    }
+
+    public void dijkstra(int[] head, int[] w, int[] eTo, int[] eNext, boolean[] vis, int[] dist, int n) {
+        // n个节点n轮
+        for (int p = 1; p <= n; p++) {
+            // 当前节点：找出未遍历过且距离最小的节点。
+            // cur必须是0，对应 dist[0] = INF，否则 cur = 1，但一旦被访问过，后续其他节点都被dist[1]拦住了
+            int cur = 0;
+            for (int i = 1; i <= n; i++) {
+                if (!vis[i] && dist[i] < dist[cur]) {
+                    cur = i;
+                }
+            }
+
+            // 更新当前节点的相邻节点的距离 dist
+            for (int idx = head[cur]; idx != 0; idx = eNext[idx]) {
+                // 未访问过 且 相邻节点
+                int node = eTo[idx];
+                // spa的边是肯定相连的，所以不用判断权重 w>=0
+                if (!vis[node]) {
+                    dist[node] = Math.min(dist[node], dist[cur] + w[idx]);
+                }
+            }
+
+            // 打上标记
+            vis[cur] = true;
+        }
+    }
+}
+```
+
+## bellman-ford
+
+```java
+class Solution {
+    public static final int INF = Integer.MAX_VALUE >> 1;
+
+    public int networkDelayTime(int[][] times, int n, int k) {
+        int[] dist = new int[n + 1];
+        Arrays.fill(dist, INF);
+        dist[k] = 0;
+
+        bellmanFord(times, dist, n);
+
+        int max = -1;
+        for (int i = 1; i <= n; i++) {
+            if (dist[i] != INF) {
+                max = Math.max(max, dist[i]);
+            } else {
+                return -1;
+            }
+        }
+        return max;
+    }
+
+    public void bellmanFord(int[][] edges, int[] dist, int n) {
+        // n个节点n - 1轮
+        for (int p = 1; p < n; p++) {
+            // 每轮遍历边，更新dist
+            for (int[] edge : edges) {
+                int from = edge[0], to = edge[1], weight = edge[2];
+                dist[to] = Math.min(dist[to], dist[from] + weight);
+
+                // if(dist[from] + weight < dist[to]){
+                //     dist[to] = dist[from] + weight;
+                // }
+            }
+        }
+    }
+}
+```
+
+
+
+## floyd
+
+```java
+// 743. 网络延迟时间
+class Solution {
+    int N = 101;
+    int[][] dist = new int[N][N];
+    final int INF = 0x3f3f3f3f;
+
+    public int networkDelayTime(int[][] times, int n, int k) {
+        // 直接在邻接矩阵的基础上造二维dist
+        for (int[] d : dist) {
+            Arrays.fill(d, INF);
+        }
+        for (int[] time : times) {
+            dist[time[0]][time[1]] = time[2];
+        }
+        for (int i = 1; i <= n; i++) {
+            dist[i][i] = 0;
+        }
+
+        floyd(n, k);
+
+        int max = 0;
+        for (int i = 1; i <= n; i++) {
+            max = Integer.max(max, dist[k][i]);
+            if (max == INF) {
+                return -1;
+            }
+        }
+        return max;
+    }
+
+    public void floyd(int n, int k) {
+        // n个中继节点则n轮
+        for (int p = 1; p <= n; p++) {
+            // 首节点
+            for (int i = 1; i <= n; i++) {
+                // 首节点是中继节点就跳过
+                if (i == p)
+                    continue;
+                // 目标节点
+                for (int j = 1; j <= n; j++) {
+                    // 目标节点是中继节点就跳过
+                    if (j == p)
+                        continue;
+                    // 因为用的0x3f3f3f3f，所以不担心溢出
+                    dist[i][j] = Math.min(dist[i][j], dist[i][p] + dist[p][j]);
+                }
+            }
+        }
+    }
+}
+```
+
