--- a/docs/题/leetcode/743. 网络延迟时间.md
+++ b/docs/题/leetcode/743. 网络延迟时间.md
@@ -1,4 +1,4 @@
-
+[toc]
 
 [743. 网络延迟时间 - 力扣（LeetCode）](https://leetcode.cn/problems/network-delay-time/description/)
 
@@ -198,50 +198,46 @@ class Solution {
 ## floyd
 
 ```java
-// 743. 网络延迟时间
 class Solution {
-    int N = 101;
-    int[][] dist = new int[N][N];
-    final int INF = 0x3f3f3f3f;
+    public static final int INF = Integer.MAX_VALUE >> 1;
 
     public int networkDelayTime(int[][] times, int n, int k) {
-        // 直接在邻接矩阵的基础上造二维dist
+        int[][] dist = new int[n + 1][n + 1];
         for (int[] d : dist) {
             Arrays.fill(d, INF);
-        }
-        for (int[] time : times) {
-            dist[time[0]][time[1]] = time[2];
         }
         for (int i = 1; i <= n; i++) {
             dist[i][i] = 0;
         }
+        for (int[] edge : times) {
+            int from = edge[0], to = edge[1], weight = edge[2];
+            dist[from][to] = weight;
+        }
 
-        floyd(n, k);
+        floyd(dist, n);
 
-        int max = 0;
+        int max = -1;
         for (int i = 1; i <= n; i++) {
-            max = Integer.max(max, dist[k][i]);
-            if (max == INF) {
+            // 从k到各节点的距离
+            max = Math.max(max, dist[k][i]);
+            if(max == INF) {
                 return -1;
             }
         }
         return max;
     }
 
-    public void floyd(int n, int k) {
-        // n个中继节点则n轮
+    public void floyd(int[][] dist, int n) {
+        // n个节点 n轮，p是中继节点
         for (int p = 1; p <= n; p++) {
-            // 首节点
+            // from
             for (int i = 1; i <= n; i++) {
-                // 首节点是中继节点就跳过
-                if (i == p)
-                    continue;
-                // 目标节点
+                // to
                 for (int j = 1; j <= n; j++) {
-                    // 目标节点是中继节点就跳过
-                    if (j == p)
+                    // from 是中继节点，表示行；to 是中继节点，表示列
+                    if (i == p || j == p) {
                         continue;
-                    // 因为用的0x3f3f3f3f，所以不担心溢出
+                    }
                     dist[i][j] = Math.min(dist[i][j], dist[i][p] + dist[p][j]);
                 }
             }
