--- a/docs/基础/07树/计算题.md
+++ b/docs/基础/07树/计算题.md
@@ -1,16 +1,48 @@
 [toc]
 
-二叉树，第n层最多有$2^{n-1}$个(偶数个)
+## 基本定义
 
-层数为 k 的二叉树至多有 $2^k-1$个结点
+节点和边
+
+- n个节点，n-1条边
+
+层
+
+- 二叉树，第n层最多有$2^{n-1}$个(偶数个)
+
+- 层数为 k 的二叉树至多有 $2^k-1$个结点
+
+层、深度、高度
+
+- 树：
+
+  - 层数=深度（该路径经过的节点，深层）
+
+  - 高度=层数-1。高度（树的高度是指根到叶子节点的最长路径的**边数**，根的高度为0）
+
+- 节点：
+
+  - 深度：从上往下：
+  - 高度：从下往上
 
 
 
-层数=深度（该路径经过的节点，深层），高度=层数-1。
+度：n0=n2+1
 
-​	高度（树的高度是指根到叶子节点的最长路径的**边数**，根的高度为0），**一楼不能算高楼**
+对于任一二叉树，若度为2的结点有n2个，则叶子结点数必为n2+1
+
+证明：	
+
+1. n个结点的二叉树，则会有n-1条边。
+2. 度为2的结点会延伸出两条边，度为1的结点会延伸出一条边。则可列公式：n -1 = 0n0 + 1n1 + 2n2，
+3. 又 n = n0 + n1 + n2。
+4. 则n0 + n1 + n2  - 1 = n1 + 2n2，则计算可知 n0=n2+1。
 
 
+
+> 哈夫曼树一共有 215个节点，进行编码，最多可以编码多少个字符？
+>
+> 即求叶子节点的数量，n0 = n2 + 1，n = n0 + 0 + n2（huffman树没有度为1的节点） ，则108 
 
 ## 完全二叉树
 
@@ -83,26 +115,4 @@ huffman树还可以，非叶子节点的权值的和
 
 
 ## [两种遍历来推树.md](遍历\两种遍历来推树.md) 
-
-
-
-## 任一二叉树n0=n2+1
-
-对于任一二叉树，若度为2的结点有n2个，则叶子结点数必为n2+1
-
-证明：	
-
-​	n个结点的二叉树，则会有n-1条边。
-
-​	度为2的结点会延伸出两条边，度为1的结点会延伸出一条边。则可列公式：n -1 = n1 + 2n2，
-
-​	又n=n0+n1+n2。
-
-​	则n0 + n1 + n2  - 1 = n1 + 2n2，则计算可知 n0=n2+1。
-
-
-
-> 哈夫曼树一共有 215个节点，进行编码，最多可以编码多少个字符？
->
-> 即求叶子节点的数量，n0 = n2 + 1，n = n0 + 0 + n2（huffman树没有度为1的节点） ，则108 
 
