--- a/docs/基础/08图/01存图方式.md
+++ b/docs/基础/08图/01存图方式.md
@@ -74,7 +74,9 @@ for (int[] edge : edges) {
   }
   ```
 
-- 遍历节点cur 的边链表
+  ![image-20250306163131971](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202503061631028.png)
+
+- 遍历节点cur 的边链表（遍历某个点的所有边）
 
   ```java
   // 节点cur 的边链表：头边是 head[cur]
