--- a/docs/基础/08图/03生成树.md
+++ b/docs/基础/08图/03生成树.md
@@ -1,159 +1,115 @@
 [toc]
 
+最小生成树：在无向图中，找一个树（n-1条边，无环，连通所有点），且边权和最小。
+
+最小生成树，可能不唯一。
+
 ## Prim算法：遍历节点
 
-和dijkstra算法相似：w + dist + vis + **pre**
-- 不是到起始节点的累计路径，而是邻居距离（但不是最短的邻居距离，见图2）。
-- 节点记录一个pre节点属性：谁更新邻居距离，pre节点就指向谁。
-- 初始化：任选一个节点，它的邻居距离是0.
-- 选取所有未遍历节点中最小的邻居距离的节点为当前顶点，更新当前顶点未遍历过的邻居节点的邻居距离，完成后连接当前节点和pre节点的路径为树枝、标记为已遍历过。
+简单理解：
 
-![alt text](../../../images/image-40.png)
+- 初始化：随机挑1个起点，加入点集。
+- 在未遍历的点中找到距离点集最小的点，连接它和点集中对应的点，并加入点集。
 
-![alt text](../../../images/image-42.png)
 
-```java 
-// 1584. 连接所有点的最小费用
-class Solution {
-    int[][] w;
-    int[] dist;
-    int[] pre;
-    boolean[] vis;
-    int INF = 0x3f3f3f3f;
 
-    public int minCostConnectPoints(int[][] points) {
-        int n = points.length;
-        int N = n + 1;
-        w = new int[N][N];
-        dist = new int[N];
-        pre = new int[N];
-        vis = new boolean[N];
-        for (int i = 0; i < n; i++) {
-            for (int j = i + 1; j < n; j++) {
-                w[i + 1][j + 1] = getDist(points, i, j);
-                w[j + 1][i + 1] = getDist(points, i, j);
-            }
-        }
-        prim(n);
-        int cost = 0;
-        for (int i = 1; i <= n; i++) {
-            if (pre[i] == 0)
-                continue;
-            cost += w[i][pre[i]];
-        }
-        return cost;
-    }
+实现算法：vis + dist + **pre** + w（适合稠密图）
 
-    public void prim(int n) {
-        Arrays.fill(dist, INF);
-        dist[1] = 0;
-        for (int p = 1; p <= n; p++) {
-            int cur = -1;
-            for (int i = 1; i <= n; i++) {
-                if (!vis[i] && (cur == -1 || dist[i] < dist[cur])) {
-                    cur = i;
-                }
-            }
-            for (int i = 1; i <= n; i++) {
-                if (!vis[i] && w[cur][i] > 0 && w[cur][i] < dist[i]) {
-                    dist[i] = w[cur][i];
-                    pre[i] = cur;
-                }
-            }
-            vis[cur] = true;
-        }
-    }
+- pre是每个节点在最小生成树中的前面节点，dist是每个节点和它前面节点的边（后面叫最短边），它就可以表示每个点和点击的最小距离。
 
-    public int getDist(int[][] points, int i, int j) {
-        return Math.abs(points[i][0] - points[j][0]) + Math.abs(points[i][1] - points[j][1]);
-    }
-}
-```
+- 初始化：任选一个节点，它的最短边是0.
+
+- 贪心策略：
+
+  - 未遍历的点中找到 dist 最小的点，作为当前节点，标记已遍历
+
+  - 再在未遍历的点中找到当前点的邻居节点，且当前点到邻居节点的边确实比原本最短边短的
+
+    连接它们和当前节点，并将它们的起点指向当前节点（这就是贪心，能小的会更小，不能小的就是最初的连接）
+
+ [1584. 连接所有点的最小费用.md](..\..\题\leetcode\1584. 连接所有点的最小费用.md) 
+
+![image-20250306161616576](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202503061616651.png)
+
+
 
 ## Kruskal算法：遍历边
 
-遍历边：并查集
-- 选择最小的边，连通头尾节点。
-- 两节点已连通，才跳过。
+遍历边：适合稀疏图
+
+- 挑选最短的边，并且两个点不在同一个连通集合中：就连接两个点。
 
 PS：两节点已连通的判断，不能通过vis，两节点都已遍历过的情况还可能是孤立的两个图要连接。
 
-![alt text](../../../images/image-41.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202503061922538.png)
 
+
+
+### 并查集
+
+[【算法与数据结构】—— 并查集-CSDN博客](https://blog.csdn.net/the_zed/article/details/105126583)
+
+特点：
+
+- 用集合中的某个元素来代表这个集合，则该元素称为此集合的代表元；
+
+- 一个集合内的所有元素组织成以代表元为根的树形结构；
+- 对于每一个元素 x，pre[x] 存放 x 在树形结构中的父亲节点（如果 x 是根节点，则令 pre[x] = x）；
+- 对于查找操作，假设需要确定 x 所在的的集合，也就是确定集合的代表元。可以沿着 pre[x] 不断在树形结构中向上移动，直到到达根节点。
+
+
+
+一般来说，一个并查集对应三个操作：
+
+- 初始化（ Init()函数 ）
+- 查找代表元（ Find()函数 ）
+- 尝试合并集合（ Join()函数 ）
 
 ```java
-// 1584. 连接所有点的最小费用
-class Solution {
-    PriorityQueue<int[]> edges = new PriorityQueue<>((a, b) -> a[2] - b[2]);
-    DisjointSetUnion dsn;
-    List<int[]> result_edges = new ArrayList<>();
-    int INF = 0x3f3f3f3f;
+class DisjointSet {
+    int[] rank;		// 根节点的高度，用于合并中确定合并方向，使树中左右子树的深度差小
+    int[] pre;
 
-    public int minCostConnectPoints(int[][] points) {
-        int n = points.length;
-        dsn = new DisjointSetUnion(n);
+    public DisjointSet(int n) {
+        rank = new int[n];
+        pre = new int[n];
         for (int i = 0; i < n; i++) {
-            for (int j = i + 1; j < n; j++) {
-                edges.offer(new int[] { i, j, getDist(points, i, j) });
-            }
+            pre[i] = i;
         }
-        prim(n);
-        int cost = 0;
-        for (int[] edge : result_edges) {
-            cost += edge[2];
-        }
-        return cost;
-    }
-
-    public void prim(int n) {
-        while (result_edges.size() < n - 1) {
-            int[] edge = edges.poll();
-            int x = edge[0], y = edge[1], w = edge[2];
-            if (dsn.union(x, y)) {
-                result_edges.add(new int[] { x, y, w });
-            }
-        }
-    }
-
-    public int getDist(int[][] points, int i, int j) {
-        return Math.abs(points[i][0] - points[j][0]) + Math.abs(points[i][1] - points[j][1]);
-    }
-}
-
-class DisjointSetUnion {
-    int n;
-    int f[];
-    int size[];
-
-    public DisjointSetUnion(int n) {
-        this.n = n;
-        f = new int[n];
-        for (int i = 0; i < n; i++) {
-            f[i] = i;
-        }
-        size = new int[n];
-        Arrays.fill(size, 1);
     }
 
     public int find(int x) {
-        return x == f[x] ? x : (f[x] = find(f[x]));
+        // 根
+        if (x == pre[x]) {
+            return x;
+        } 
+        // 递归，并将其直接指向根，缩短查找时间
+        else {
+            return pre[x] = find(pre[x]);
+        }
     }
 
-    public boolean union(int x, int y) {
-        int fx = find(x), fy = find(y);
-
-        if (fx == fy) {
+    public boolean join(int x, int y) {
+        // 找到并集的根
+        int px = find(x);
+        int py = find(y);
+        // 根相同，合并失败；根不同，比较层级，根的pre是另一个根
+        if (px == py) {
             return false;
-        } else {
-            if (size[fx] < size[fy]) {
-                size[fy] = size[fx] + size[fy];
-                f[fx] = fy;
-            } else {
-                size[fx] = size[fx] + size[fy];
-                f[fy] = fx;
-            }
-            return true;
         }
+        if (rank[px] == rank[py]) {
+            rank[px]++;
+        }
+        if (rank[px] < rank[py]) {
+            pre[px] = py;
+        } else {
+            pre[py] = px;
+        }
+        return true;
     }
 }
 ```
+
+### 实现：并查集 + 优先级队列
+
+ [1584. 连接所有点的最小费用.md](..\..\题\leetcode\1584. 连接所有点的最小费用.md) 
