--- a/docs/基础/08图/计算题.md
+++ b/docs/基础/08图/计算题.md
@@ -1,3 +1,7 @@
+[toc]
+
+
+
 下面哪些方法可以判断出一个有向图是否有环（回路)
 
 ​	拓扑排序：最后拿不走的
@@ -16,29 +20,35 @@
 
 【邻接矩阵】
 
-一个含有n个顶点和e条边的图，在其邻接矩阵存储结构中共有（）个零元素
+> 一个含有n个顶点和e条边的图，在其邻接矩阵存储结构中共有（）个零元素
 
-​	有向：n^2-e
+- 有向：n^2-e
 
-​	无向：n^2-2e
+- 无向：n^2-2e
 
-如果某图的邻接矩阵是对角线元素均为零的上三角矩阵，则此图是**有向无环图**	
+
+
+> 如果某图的邻接矩阵是对角线元素均为零的上三角矩阵，则此图是**有向无环图**	
 
 ​	对角线元素为零 + 上三角矩阵（说明这个图是有向的，无向图的邻接矩阵是对称矩阵）
 
-【时间复杂度】
 
-设某无向图中有n个节点e条边，则**建立**该图**邻接表**的时间复杂度为
 
-​	O(n+e)
+### 时间复杂度
 
-对有n 个顶点、 e 条边且使用**邻接表**存储的有向图进行**广度优先遍历**的时间复杂度是 
+> 设某无向图中有n个节点e条边，则**建立**该图**邻接表**的时间复杂度为
 
-​	O(n+e)；
+O(n+e)
 
 
 
-【度】
+> 对有n 个顶点、 e 条边且使用**邻接表**存储的有向图进行**广度优先遍历**的时间复杂度是 
+
+O(n+e)；
+
+
+
+### 度
 
 在有向图中，各顶点的**入度之和** **等于** 各顶点的**出度之和**
 
@@ -60,9 +70,11 @@
 
 贪心（贪心选择性质和最优子结构性质）:
 
-​	最小生成树的Prim和Kruskal
+- Dijkstra的单源最短路径
 
-​	Dijkstra的单源最短路径
+- 最小生成树的Prim和Kruskal
+
+​	
 
 动态规划：
 
