--- a/docs/基础/08图/04拓扑排序.md
+++ b/docs/基础/08图/04拓扑排序.md
@@ -1,2 +1,162 @@
-每次删除掉入度为0的节点，再从新图中递归；剩下的节点就是环。
+[toc]
+
+## 定义
+
+拓扑排序是针对**有向无环图**（DAG）来说的
+
+- 无向图和有向有环图（不能输出所有节点），没有拓扑排序
+- 排序所有顶点，使得图中任意一点 u和 v，如果存在有向边 <u,v>，则 u 必须在 v 之前出现。
+
+
+
+对于一个有向无环图来说，拓扑序列可能不止一个：
+
+- v1→v2→v3→v4→v5→v6是该图的一个拓扑序列。
+- v1→v2→v3→v4→v6→v5也是该图的一个拓扑序列。
+
+![有向无环图](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202503061935487.png)
+
+
+
+## Kahn 算法（基于BFS）
+
+1. 不断找寻有向图中入度为 0 的顶点，将其输出。
+2. 删除其和发出的有向边。
+3. 重复直到图为空，或者找不到入度为 0 的节点（说明有环）。
+
+```java
+// 210. 课程表 II
+class Solution {
+    public int[] findOrder(int numCourses, int[][] prerequisites) {
+        List<Integer> res = kahn(numCourses, prerequisites);
+        return res.size() == numCourses ? res.stream().mapToInt(i -> i).toArray() : new int[] {};
+    }
+
+    public List<Integer> kahn(int n, int[][] edge) {
+        List<Integer> res = new ArrayList<>();
+
+        // 统计入度
+        int[] deg = new int[n];
+        for (int[] p : edge) {
+            int from = p[1], to = p[0];
+            deg[to]++;
+        }
+
+        // 入队 0 
+        LinkedList<Integer> q = new LinkedList<>();
+        for (int i = 0; i < n; i++) {
+            if (deg[i] == 0) {
+                q.offer(i);
+            }
+        }
+        while (q.size() != 0) {
+            // 出队0
+            int cur = q.poll();
+            res.add(cur);
+
+            // 删除边，再入新0
+            for (int[] p : edge) {
+                int from = p[1], to = p[0];
+                if (from == cur) {
+                    deg[to]--;
+                    if (deg[to] == 0) {
+                        q.offer(to);
+                    }
+                }
+            }
+        }
+        return res;
+    }
+}
+```
+
+
+
+## 基于 DFS 实现拓扑排序算法
+
+````java
+        int[][] w = new int[numCourses + 1][numCourses + 1];
+        for (int[] t : w) {
+            Arrays.fill(t, -1);
+        }
+        for (int[] p : prerequisites) {
+            int from = p[1], to = p[0];
+            w[from][to] = 1;
+        }
+````
+
+```
+    // 方法 2：邻接矩阵 + DFS   由于用的数组，每次都要遍历，效率比较低
+    public int[] findOrder(int numCourses, int[][] prerequisites) {
+        if (numCourses == 0) return new int[0];
+        // 建立邻接矩阵
+        int[][] graph = new int[numCourses][numCourses];
+        for (int[] p : prerequisites) {
+            graph[p[1]][p[0]] = 1;
+        }
+        // 记录访问状态的数组，访问过了标记 -1，正在访问标记 1，还未访问标记 0
+        int[] status = new int[numCourses];
+        Stack<Integer> stack = new Stack<>();  // 用栈保存访问序列
+        for (int i = 0; i < numCourses; i++) {
+            if (!dfs(graph, status, i, stack)) return new int[0]; // 只要存在环就返回
+        }
+        int[] res = new int[numCourses];
+        for (int i = 0; i < numCourses; i++) {
+            res[i] = stack.pop();
+        }
+        return res;
+    }
+
+    private boolean dfs(int[][] graph, int[] status, int i, Stack<Integer> stack) {
+        if (status[i] == 1) return false; // 当前节点在此次 dfs 中正在访问，说明存在环
+        if (status[i] == -1) return true;
+
+        status[i] = 1;
+        for (int j = 0; j < graph.length; j++) {
+            // dfs 访问当前课程的后续课程，看是否存在环
+            if (graph[i][j] == 1 && !dfs(graph, status, j, stack)) return false;
+        }
+        status[i] = -1;  // 标记为已访问
+        stack.push(i);
+        return true;
+    }
+```
+
+```java
+    // 方法 2 升级版：用 HashSet 作为邻接矩阵，加速查找速度
+    public int[] findOrder(int numCourses, int[][] prerequisites) {
+        if (numCourses == 0) return new int[0];
+        // HashSet 作为邻接矩阵
+        HashSet<Integer>[] graph = new HashSet[numCourses];
+        for (int i = 0; i < numCourses; i++) {
+            graph[i] = new HashSet<>();
+        }
+        for (int[] p : prerequisites) {
+            graph[p[1]].add(p[0]);
+        }
+        int[] mark = new int[numCourses]; // 标记数组
+        Stack<Integer> stack = new Stack<>(); // 结果栈
+        for (int i = 0; i < numCourses; i++) {
+            if(!isCycle(graph, mark, i, stack)) return new int[0];
+        }
+        int[] res = new int[numCourses];
+        for (int i = 0; i < numCourses; i++) {
+            res[i] = stack.pop();
+        }
+        return res;
+    }
+
+    private boolean isCycle(HashSet<Integer>[] graph, int[] mark, int i, Stack<Integer> stack) {
+        if (mark[i] == -1) return true;
+        if (mark[i] == 1) return false;
+
+        mark[i] = 1;
+        for (int neighbor : graph[i]) {
+            if (!isCycle(graph, mark, neighbor, stack)) return false;
+        }
+        mark[i] = -1;
+        stack.push(i);
+        return true;
+    }
+```
 
