--- a/docs/基础/07树/遍历/深度遍历.md
+++ b/docs/基础/07树/遍历/深度遍历.md
@@ -1,18 +1,12 @@
 [toc]
 
-用递归。
-
-深度优先遍历分先序遍历、后序遍历、中序遍历
-
-不用遵循dfs模板，需要另外记忆。
-
 ## 递归
-符合dfs 模板： [递归.md](..\..\recursion\递归.md) 
+深度优先遍历分**前序遍历**（最常用）、后序遍历、中序遍历
 
 ```java
 // 144. 二叉树的前序遍历
 class Solution {
-    List<Integer> result = new ArrayList<>();
+    List<Integer> list = new ArrayList<>();
 
     public List<Integer> preorderTraversal(TreeNode root) {
         dfs(root);
@@ -23,36 +17,14 @@ class Solution {
         if (root == null) {
             return;
         }
-        for (int i = 0; i < 3; i++) {
-            // 这里用 i 模拟
-            if (i == 0)
-                result.add(root.val);
-            else if (i == 1)
-                dfs(root.left);
-            else if (i == 2)
-                dfs(root.right);
-        }
+        
+        list.add(root.val);     
+        dfs(root.left);
+        dfs(root.right);
     }
 }
 ```
 
-精简的
-
-```java
-class Solution {
-    // 结果一定要在dfs外面
-    List<Integer> list = new LinkedList<>();
-    
-    public List<Integer> preorderTraversal(TreeNode root) {
-        if(root != null){
-            list.add(root.val);     
-            preorderTraversal(root.left);
-            preorderTraversal(root.right);
-        }
-        return list;
-    }
-}
-```
 ## 栈
 
 - 一个栈，先不压入root
