--- a/docs/基础/08图/01存图方式.md
+++ b/docs/基础/08图/01存图方式.md
@@ -41,7 +41,27 @@ for (int[] edge : edges) {
 
 [9.2  图基础操作 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_graph/graph_operations/#921)
 
-## 邻接表之链式前向星spa
+## 邻接表
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/2019080616513495.png)
+
+邻接表的链表，其中存储了各顶点的与各自相连的邻接顶点。
+
+
+
+邻接表和邻接矩阵的区别就是：
+
+- 邻接矩阵存权重，邻接表只记录是否有边。
+
+- 邻接矩阵for循环找到边节点快，但空间O(n^2)
+
+  邻接表仅存储实际存在的边，查找O(n)。
+
+  当链表较长时，可以将链表转化为 AVL 树或红黑树，从而将时间效率从 𝑂(𝑛) 优化至 𝑂(log⁡𝑛) ；还可以把链表转换为哈希表，从而将时间复杂度降至 𝑂(1) 。
+
+
+
+### 链式前向星spa
 
 - 插入过程的更新
 
@@ -88,26 +108,14 @@ for (int[] edge : edges) {
   }
   ```
 
-## 邻接表
-
-![在这里插入图片描述](https://img-blog.csdnimg.cn/2019080616513495.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Rhb2Nhb3Jlbl8=,size_16,color_FFFFFF,t_70)
-
-邻接表的链表，其中存储了各顶点的与各自相连的邻接顶点。
-
-
-
-邻接表和邻接矩阵的区别就是：
-
-- 邻接矩阵存权重，邻接表只记录是否有边。
-
-- 邻接矩阵for循环找到边节点快，但空间O(n^2)
-
-  邻接表仅存储实际存在的边，查找O(n)。
-
-  当链表较长时，可以将链表转化为 AVL 树或红黑树，从而将时间效率从 𝑂(𝑛) 优化至 𝑂(log⁡𝑛) ；还可以把链表转换为哈希表，从而将时间复杂度降至 𝑂(1) 。
+### 链表
 
 [9.2  图基础操作 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_graph/graph_operations/#922)
 
- [207. 课程表.md](..\..\题\leetcode\207. 课程表.md) 
+### 集合数组
+
+🚀 [207. 课程表.md](..\..\题\leetcode\207. 课程表.md)：如何邻接表集合数组
+
+ [797. 所有可能的路径.md](..\..\题\leetcode\797. 所有可能的路径.md)：给出的输入数据是这样
 
 ## 类Vertex/Edge
