--- a/docs/基础/08图/04拓扑排序.md
+++ b/docs/基础/08图/04拓扑排序.md
@@ -24,53 +24,11 @@
 2. 删除其和发出的有向边。
 3. 重复直到图为空，或者找不到入度为 0 的节点（说明有环）。
 
-```java
-// 210. 课程表 II
-class Solution {
-    public int[] findOrder(int numCourses, int[][] prerequisites) {
-        List<Integer> res = kahn(numCourses, prerequisites);
-        return res.size() == numCourses ? res.stream().mapToInt(i -> i).toArray() : new int[] {};
-    }
-
-    public List<Integer> kahn(int n, int[][] edge) {
-        List<Integer> res = new ArrayList<>();
-
-        // 统计入度
-        int[] deg = new int[n];
-        for (int[] p : edge) {
-            int from = p[1], to = p[0];
-            deg[to]++;
-        }
-
-        // 入队 0 
-        LinkedList<Integer> q = new LinkedList<>();
-        for (int i = 0; i < n; i++) {
-            if (deg[i] == 0) {
-                q.offer(i);
-            }
-        }
-        while (q.size() != 0) {
-            // 出队0
-            int cur = q.poll();
-            res.add(cur);
-
-            // 删除边，再入新0
-            for (int[] p : edge) {
-                int from = p[1], to = p[0];
-                if (from == cur) {
-                    deg[to]--;
-                    if (deg[to] == 0) {
-                        q.offer(to);
-                    }
-                }
-            }
-        }
-        return res;
-    }
-}
-```
 
 
+O(*n*+*m*)，其中 n 是图中节点数目，m 是图中边数目。
+
+ [210. 课程表 II.md](..\..\题\leetcode\210. 课程表 II.md) 
 
 ## 基于 DFS 实现拓扑排序算法
 
@@ -160,3 +118,4 @@ class Solution {
     }
 ```
 
+ [207. 课程表.md](..\..\题\leetcode\207. 课程表.md) 
