--- a/docs/题/leetcode/695. 岛屿的最大面积.md
+++ b/docs/题/leetcode/695. 岛屿的最大面积.md
@@ -1,5 +1,7 @@
 [toc]
 
+[695. 岛屿的最大面积 - 力扣（LeetCode）](https://leetcode.cn/problems/max-area-of-island/description/)
+
 ## dfs
 
 ```java
@@ -28,7 +30,7 @@ class Solution {
         }
 
         grid[i][j] = 0;
-        int sum = 1;
+        int sum = 1;	// 当前就算
         for (int p = 0; p < pi.length; p++) {
             int di = pi[p];
             int dj = pj[p];
